new modifications in config.json and Environments.json, i added conferenceroom functions and some steps,also i modify the pageTransporter And the MainAdmin steps

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "implicitWait" : "10",
     "explicitWait" : "20",
+    "default browser" : "Firefox",
     "chrome driver path" : "src/main/resources/chromedriver.exe",
     "NumberOfTriesForElementDeleted" : "10"
 }
