immplemented some methods to using API the remove resource is done, getToken is done too, and the resources scenrios work with after remove a resource created

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "implicitWait" : "10",
     "explicitWait" : "20",
-    "default browser" : "Firefox",
+    "default browser" : "Chrome",
     "chrome driver path" : "src/main/resources/chromedriver.exe",
     "NumberOfTriesForElementDeleted" : "10"
 }
